--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 # Xcode
 #
-build/
+ios/build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -24,7 +24,8 @@ DerivedData
 
 # Android/IntelliJ
 #
-build/
+android/app/build/
+android/build/
 .idea
 .gradle
 local.properties
