chore(android): update permission dan konfigurasi bluetooth

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -17,6 +17,9 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+# Explicitly tell Gradle which JDK installation to use on Windows.
+org.gradle.java.home=C:/Users/Developer/AppData/Local/Programs/Eclipse Adoptium/jdk-17.0.17.10-hotspot
+
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
