--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-ble-plx": "^3.5.0",
+    "react-native-camera-kit": "^16.1.3",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-get-random-values": "^2.0.0",
     "react-native-safe-area-context": "^5.5.2",
